# akshara

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  cobertura.xml
aadhaara/: Cargo.toml  README.md
aadhaara/benches/: sync_bench.rs
aadhaara/src/: lib.rs  test_utils.rs
aadhaara/src/base/: address.rs  crypto.rs  encoding.rs  error.rs  mod.rs  test_address.rs  test_crypto.rs  test_encoding.rs  test_error.rs
aadhaara/src/graph/: block.rs  document.rs  manifest.rs  mod.rs  test_block.rs  test_conflict.rs  test_lineage.rs  test_manifest.rs
aadhaara/src/identity/: derivation.rs  graph.rs  mnemonic.rs  mod.rs  paths.rs  test_authority_edge_cases.rs  test_identity.rs  test_identity_graph.rs  test_identity_graph_authority.rs  test_identity_protocol.rs  test_prekey.rs  test_temporal_forgery.rs  types.rs
aadhaara/src/protocol/: engine.rs  mod.rs  test_sync_engine.rs  test_sync_protocol.rs
aadhaara/src/state/: in_memory_store.rs  mod.rs  store.rs  test_graph_storage.rs  test_lockbox_storage.rs  test_prekey_storage.rs
aadhaara/src/traversal/: auditor.rs  index_builder.rs  mod.rs  test_auditor.rs  test_chain_of_title.rs  test_index_builder.rs  test_merkle_index.rs  test_traversal.rs  walker.rs
aadhaara/tests/: lifecycle_integration.rs  stress_tests.rs
akshara/: Cargo.toml
akshara/src/: client.rs  config.rs  error.rs  graph.rs  layout.rs  lib.rs  ordering.rs  path.rs  schema.rs  staging.rs  store.rs  vault.rs
akshara/src/graph/: core.rs  document.rs  flush.rs  history.rs  ops.rs  sync.rs  tests.rs
akshara/src/layout/: chunked.rs  collection.rs  standalone.rs  text.rs
akshara/src/schema/: collaborative_text.rs  document.rs  field.rs  lazy.rs
akshara/src/staging/: coalesce.rs  memory.rs  tests.rs
akshara/src/store/: sqlite.rs
akshara/src/sync/: engine.rs  local_memory_transport.rs  mock_transport.rs  mod.rs  transport.rs  types.rs
akshara/src/vault/: ephemeral.rs  platform.rs
akshara/tests/: integration_document.rs  integration_document_pipeline.rs  integration_graph_reads.rs  integration_layout.rs  integration_local_sync.rs  integration_staging.rs  integration_sync.rs  integration_vault.rs  test_macros.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core/benches/: sync_bench.rs
core/src/: crypto.rs  error.rs  lib.rs  store.rs
core/src/base/: address.rs  crypto.rs  error.rs  mod.rs  test_address.rs  test_crypto.rs  test_error.rs
core/src/graph/: block.rs  manifest.rs  mod.rs  test_block.rs  test_conflict.rs  test_lineage.rs  test_manifest.rs  walker.rs
core/src/identity/: mod.rs  test_authority_edge_cases.rs  test_identity.rs  test_identity_graph.rs  test_identity_protocol.rs  test_temporal_forgery.rs
core/src/protocol/: engine.rs  mod.rs  test_sync_engine.rs  test_sync_protocol.rs
core/src/state/: in_memory_store.rs  mod.rs  store.rs  test_graph_storage.rs  test_lockbox_storage.rs
core/src/sync/: engine.rs  mod.rs
core/src/traversal/: auditor.rs  mod.rs  test_merkle_index.rs  test_traversal.rs  walker.rs
core/tests/: block_auth.rs  block_encryption.rs  block_encryption_negative.rs  block_identity.rs  block_integrity.rs  block_lineage_tests.rs  block_properties.rs  block_tests.rs  cid_tests.rs  conflict_detection_tests.rs  crypto_tests.rs  graph_storage_tests.rs  graph_traversal_tests.rs  identity_graph_tests.rs  identity_negative.rs  identity_protocol_tests.rs  identity_tests.rs  lifecycle_integration.rs  lockbox_storage_tests.rs  lockbox_tests.rs  manifest_tests.rs  merkle_index_tests.rs  stress_tests.rs  sync_engine_tests.rs  sync_protocol.rs
core/tests/common/: mod.rs
demos/: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
docs/: README.md  VISION.md
docs/akshara/: README.md
docs/api/: README.md
docs/blueprint/: README.md
docs/blueprint/core/: observability-standards.md  system-overview.md
docs/blueprint/identity/: asynchronous-registry.md  bip-technical-deepdive.md  identity-graph.md  tiered-model-explainer.md  tiered-model.md
docs/blueprint/platform/: deployment-models.md  linked-graphs.md  metadata-spec.md  primitives.md
docs/blueprint/product/: features.md  persona.md  vision.md
docs/blueprint/sdk/: core-concepts.md  rust-api.md
docs/blueprint/synchronization/: causality-and-time.md  sync-protocol.md
docs/graph-model/: README.md  governance.md  indices.md  linking.md  nodes.md  schemas.md  snapshots.md
docs/guides/: README.md
docs/identity/: README.md  authority.md  derivation.md  discovery.md  lifecycle.md  tiered-authority-adr.md
docs/representation/: README.md  encoding.md  identifiers.md
docs/sharing/: README.md  lockboxes.md  prekeys.md
docs/specs/api/: README.md  access-control.md  change-tracking.md  client-and-graph.md  conflicts.md  errors.md  reactive.md  sync.md  typed-documents.md
docs/specs/graph-model/: README.md  governance.md  indices.md  linking.md  nodes.md  schema-registry.md  schemas.md  snapshots.md
docs/specs/identity/: README.md  authority.md  derivation.md  discovery.md  lifecycle.md  tiered-authority-adr.md
docs/specs/observability/: diagnostics.md
docs/specs/representation/: README.md  encoding.md  identifiers.md
docs/specs/sharing/: README.md  lockboxes.md  prekeys.md
docs/specs/storage/: README.md  interface.md  semantics.md
docs/specs/synchronization/: README.md  fulfillment.md  (+1 more)
docs/storage/: README.md  interface.md  semantics.md
docs/synchronization/: README.md  fulfillment.md  reconciliation.md
proto/: relay.proto
relay/: Cargo.toml  build.rs
relay/src/: discovery.rs  error.rs  lib.rs  main.rs  mapping.rs  service.rs  sync.rs
relay/tests/: integration_tests.rs
schema/: Cargo.toml
schema-macros/: Cargo.toml
schema-macros/src/: lib.rs
schema/src/: adapters.rs  document.rs  lib.rs  test_document.rs
schema/tests/: integration_adapters.rs  integration_document.rs
sdk/: Cargo.toml
sdk/src/: error.rs  sync.rs
sdk/tests/: client_sync_tests.rs
sovereign-wire/: Cargo.toml
sovereign-wire/proto/: relay.proto
sovereign-wire/src/: lib.rs  mapping.rs
wire/: Cargo.toml  build.rs
wire/src/: mapping.rs
(+10 files in other folders)
