[package]
name = "akshara-aadhaara"
version = "0.1.0-alpha.1"
edition = "2024"

[features]
wire = []

[dependencies]
sha2 = "0.10"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
aes-gcm = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
bip39 = "2.0"
thiserror = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
tracing = "0.1"
metrics = "0.23"
cid = { version = "0.11", features = ["serde"] }
multihash = "0.19"
multihash-codetable = { version = "0.1", features = ["blake3", "sha2", "sha3"] }
serde_cbor = "0.11"
async-trait = "0.1"

[dev-dependencies]
criterion = "0.8"
hex = "0.4"
proptest = "1.1"
tokio = { version = "1.40", features = ["full"] }
tracing-subscriber = "0.3"

[[bench]]
name = "sync_bench"
harness = false
