[package]
name = "akshara"
version = "0.1.0-alpha.1"
edition.workspace = true
description = "The developer-facing API for building applications on Akshara"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vijayanant/akshara"
keywords = ["encryption", "local-first", "merkle-dag", "decentralized"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Internal
akshara-aadhaara = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_ipld_dagcbor = { workspace = true }

# Cryptography
rand = { workspace = true }
zeroize = { workspace = true }
keyring = { workspace = true }
hex = "0.4"

# Storage
rusqlite = { workspace = true }
fractional_index = { version = "2.0", features = ["serde"] }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
