[package]
name = "sovereign-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.8"
hmac = "0.12.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
aes-gcm = "0.10.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.8.5"
bip39 = "2.0.0"
thiserror = "1.0.61"
zeroize = { version = "1.8.1", features = ["derive"] }
tracing = "0.1.40"
metrics = "0.23.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"

