[package]
name = "akshara-demos"
version = "0.1.0"
edition = "2024"
description = "Functional demonstrations for the Akshara SDK"

[dependencies]
akshara = { path = "../akshara" }
akshara-aadhaara = { path = "../aadhaara" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
