[package]
name = "akshara-relay"
version = "0.1.0-alpha.1"
edition.workspace = true

[lib]
name = "akshara_relay"
path = "src/lib.rs"

[[bin]]
name = "akshara-relay"
path = "src/bin/server.rs"

[dependencies]
# Internal
akshara-aadhaara = { workspace = true }

# Workspace
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }

# Local
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
